tests/algorithms/x/Java/project_euler/problem_007/sol3.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden820_sol32238218140/001/Main.java:31: error: unreachable statement
        return 0;
        ^
1 error
